--- a/Views/Button/getPost.cshtml
+++ b/Views/Button/getPost.cshtml
@@ -1,10 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Đăng tin mới";
-    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
-@*@Styles.Render("~/Content/css")
-@Scripts.Render("~/Scripts/js")*@
 
 <div class="container">
     <form id="form_dangtin" class="form-horizontal js-form-submit-data js-frm-manage-post" data-action-url="https://phongtro123.com/api/post/create" novalidate="novalidate">
@@ -20,70 +17,8 @@
                         <div class="form-group">
                             <label for="province_id" class="col-form-label">Tỉnh/Thành phố</label>
                             <select id="province_id" name="province_id" class="form-control js-select-tinhthanhpho select2-hidden-accessible" required="" data-msg-required="Chưa chọn Tỉnh/TP" tabindex="-1" aria-hidden="true">
-                                <option value="">-- Chọn Tỉnh/TP --</option>
-                                <option value="90">Hồ Chí Minh</option>
-                                <option value="41">Hà Nội</option>
-                                <option value="72">Đà Nẵng</option>
-                                <option value="87">Bình Dương</option>
-                                <option value="88">Đồng Nai</option>
-                                <option value="89">Bà Rịa - Vũng Tàu</option>
-                                <option value="99">Cần Thơ</option>
-                                <option value="77">Khánh Hòa</option>
-                                <option value="60">Hải Phòng</option>
-                                <option value="97">An Giang</option>
-                                <option value="55">Bắc Giang</option>
-                                <option value="44">Bắc Kạn</option>
-                                <option value="102">Bạc Liêu</option>
-                                <option value="58">Bắc Ninh</option>
-                                <option value="93">Bến Tre</option>
-                                <option value="85">Bình Phước</option>
-                                <option value="79">Bình Thuận</option>
-                                <option value="75">Bình Định</option>
-                                <option value="103">Cà Mau</option>
-                                <option value="43">Cao Bằng</option>
-                                <option value="81">Gia Lai</option>
-                                <option value="42">Hà Giang</option>
-                                <option value="63">Hà Nam</option>
-                                <option value="68">Hà Tĩnh</option>
-                                <option value="59">Hải Dương</option>
-                                <option value="100">Hậu Giang</option>
-                                <option value="51">Hòa Bình</option>
-                                <option value="61">Hưng Yên</option>
-                                <option value="98">Kiên Giang</option>
-                                <option value="80">Kon Tum</option>
-                                <option value="48">Lai Châu</option>
-                                <option value="84">Lâm Đồng</option>
-                                <option value="53">Lạng Sơn</option>
-                                <option value="46">Lào Cai</option>
-                                <option value="91">Long An</option>
-                                <option value="64">Nam Định</option>
-                                <option value="67">Nghệ An</option>
-                                <option value="65">Ninh Bình</option>
-                                <option value="78">Ninh Thuận</option>
-                                <option value="56">Phú Thọ</option>
-                                <option value="76">Phú Yên</option>
-                                <option value="69">Quảng Bình</option>
-                                <option value="73">Quảng Nam</option>
-                                <option value="74">Quảng Ngãi</option>
-                                <option value="54">Quảng Ninh</option>
-                                <option value="70">Quảng Trị</option>
-                                <option value="101">Sóc Trăng</option>
-                                <option value="49">Sơn La</option>
-                                <option value="86">Tây Ninh</option>
-                                <option value="62">Thái Bình</option>
-                                <option value="52">Thái Nguyên</option>
-                                <option value="66">Thanh Hóa</option>
-                                <option value="71">Thừa Thiên Huế</option>
-                                <option value="92">Tiền Giang</option>
-                                <option value="94">Trà Vinh</option>
-                                <option value="45">Tuyên Quang</option>
-                                <option value="95">Vĩnh Long</option>
-                                <option value="57">Vĩnh Phúc</option>
-                                <option value="50">Yên Bái</option>
-                                <option value="82">Đắk Lắk</option>
-                                <option value="83">Đắk Nông</option>
-                                <option value="47">Điện Biên</option>
-                                <option value="96">Đồng Tháp</option>
+                                @* có api render tỉnh thành*@
+                                <option value="">Chưa chọn tỉnh/thành phố</option>
                             </select><span class="select2 select2-container select2-container--default" dir="ltr" style="width: 171.1px;"><span class="selection"><span class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true" aria-expanded="false" tabindex="0" aria-labelledby="select2-province_id-container"><span class="select2-selection__rendered" id="select2-province_id-container" title="-- Chọn Tỉnh/TP --">-- Chọn Tỉnh/TP --</span><span class="select2-selection__arrow" role="presentation"><b role="presentation"></b></span></span></span><span class="dropdown-wrapper" aria-hidden="true"></span></span>
                         </div>
                     </div>
@@ -315,3 +250,8 @@
         <input type="hidden" id="payment_method" name="payment_method" value="thanh_toan_sau">
     </form>
 </div>
+
+@section footer
+{
+    <script src="~/Scripts/js/tinh-thanh.js"></script>
+}
