--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -26,7 +26,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css" />
     <!-- fevicon -->
-    <link rel="icon" href="~/Content/images/fevicon.png" type="image/gif" />
+    @*<link rel="icon" href="~/Content/images/fevicon.png" type="image/gif" />*@
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="~/Content/css/jquery.mCustomScrollbar.min.css" />
     <!-- font-awesome -->
@@ -155,11 +155,14 @@
     </footer>
     <!-- end footer -->
     <!-- Javascript files-->
-    <script src="~/Scripts/js/jquery.min.js"></script>
+    @*<script src="~/Scripts/js/jquery.min.js"></script>*@
     <script src="~/Scripts/js/bootstrap.bundle.min.js"></script>
-    <script src="~/Scripts/js/jquery-3.0.0.min.js"></script>
+    @*<script src="~/Scripts/js/jquery-3.0.0.min.js"></script>*@
     <!-- sidebar -->
     <script src="~/Scripts/js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="~/Scripts/js/custom.js"></script>
+
+    @RenderSection(name: "footer", required: false) 
+
 </body>
 </html>
