--- a/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -40,7 +40,7 @@
             <input type="file" name="img" id="img" accept=".jpg, .png, .gif, .jpeg, .bmp"/>
         </div>
         <div class="col-md-4">
-            <img src="@Model.avtImage" width="100px" />
+            <img src="~/Content/images/@Model.avtImage" width="100px" />
         </div>
     </div>
 
