--- a/Areas/Admin/Views/News/Edit.cshtml
+++ b/Areas/Admin/Views/News/Edit.cshtml
@@ -31,7 +31,7 @@
             <input type="file" name="img" id="img" accept=".jpg, .png, .gif, .jpeg, .bmp" />
         </div>
         <div class="col-md-4">
-            <img src="@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
+            <img src="~/Content/images/@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
         </div>
     </div>
 
