--- a/Areas/Admin/Views/RoomInfoes/Create.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Create.cshtml
@@ -145,9 +145,9 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@*@section Scripts {
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}*@
+}
 
 @section _Footer
 {
