--- a/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -399,6 +399,8 @@
 
     @RenderSection("_Header", false)
     @RenderSection("_Footer", false)
+    @RenderSection("Scripts", false)
+    Scripts
 </body>
 
 </html>
