--- a/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/Areas/Admin/Views/Accounts/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<HoiTroWebsite.Models.Account>
+﻿@using HoiTroWebsite.Help
+
+@model IEnumerable<HoiTroWebsite.Models.Account>
 
 @{
     ViewBag.Title = "Index";
@@ -14,160 +16,162 @@
     <link href="~/Areas/Admin/Content/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 }
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
             Quản lý tài khoản người dùng
         </div>
         <div class="panel-body">
-            <div id="dataTables-example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_length" id="dataTables-example_length">
-                            <label>
-                                Show <select name="dataTables-example_length" aria-controls="dataTables-example"
-                                             class="form-control input-sm">
-                                    <option value="10">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                </select> entries
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div id="dataTables-example_filter" class="dataTables_filter">
-                            <label>
-                                Search:<input type="search"
-                                              class="form-control input-sm" placeholder="" aria-controls="dataTables-example">
-                            </label>
-                        </div>
-                    </div>
+            <div class="bs-example" style="text-align:right; padding-bottom:10px;">
+                <div class="btn-group">
+                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Thêm mới", "Create New", "Create", "Accounts", new { }, new { @class = "btn btn-primary" })
                 </div>
-                <!-- chèn bảng  -->
-                <div class="row">
-                    <!-- /.panel-heading -->
-                    <div class="col-lg-12">
-                        <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.phoneNum)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.email)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.zaloNum)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.FBlink)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.avtImage)
-                                </th>
-                                @*<th>
+                <div id="dataTables-example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="dataTables_length" id="dataTables-example_length">
+                                <label>
+                                    Show <select name="dataTables-example_length" aria-controls="dataTables-example"
+                                                 class="form-control input-sm">
+                                        <option value="10">10</option>
+                                        <option value="25">25</option>
+                                        <option value="50">50</option>
+                                        <option value="100">100</option>
+                                    </select> entries
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div id="dataTables-example_filter" class="dataTables_filter">
+                                <label>
+                                    Search:<input type="search"
+                                                  class="form-control input-sm" placeholder="" aria-controls="dataTables-example">
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- chèn bảng  -->
+                    <div class="row">
+                        <!-- /.panel-heading -->
+                        <div class="col-lg-12">
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.name)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.phoneNum)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.email)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.zaloNum)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.FBlink)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.avtImage)
+                                    </th>
+                                    @*<th>
                                     @Html.DisplayNameFor(model => model.password)
                                 </th>*@
-                                <th>
-                                    @Html.DisplayNameFor(model => model.meta)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.hide)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.order)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.datebegin)
-                                </th>
-                                <th></th>
-                            </tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.meta)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.hide)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.order)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.datebegin)
+                                    </th>
+                                    <th></th>
+                                </tr>
 
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.phoneNum)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.email)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.zaloNum)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.FBlink)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.avtImage)
-                                    </td>
-                                    @*<td>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.phoneNum)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.email)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.zaloNum)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.FBlink)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.avtImage)
+                                        </td>
+                                        @*<td>
                                         @Html.DisplayFor(modelItem => item.password)
                                     </td>*@
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.meta)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.hide)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.order)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.datebegin)
-                                    </td>
-                                    <td>
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                                        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-                                    </td>
-                                </tr>
-                            }
-                        </table>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="dataTables_info" id="dataTables-example_info" role="status" aria-live="polite">
-                            Showing 1 to
-                            10 of 57 entries
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.meta)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.hide)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.order)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.datebegin)
+                                        </td>
+                                        <td>
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                                            @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                                        </td>
+                                    </tr>
+                                }
+                            </table>
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
-                            <ul class="pagination">
-                                <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0"
-                                    id="dataTables-example_previous"><a href="#">Previous</a></li>
-                                <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">1</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">2</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">3</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">4</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">5</a>
-                                </li>
-                                <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
-                                    <a href="#">6</a>
-                                </li>
-                                <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0"
-                                    id="dataTables-example_next"><a href="#">Next</a></li>
-                            </ul>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="dataTables_info" id="dataTables-example_info" role="status" aria-live="polite">
+                                Showing 1 to
+                                10 of 57 entries
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
+                                <ul class="pagination">
+                                    <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0"
+                                        id="dataTables-example_previous"><a href="#">Previous</a></li>
+                                    <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
+                                        <a href="#">1</a>
+                                    </li>
+                                    <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                        <a href="#">2</a>
+                                    </li>
+                                    <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                        <a href="#">3</a>
+                                    </li>
+                                    <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                        <a href="#">4</a>
+                                    </li>
+                                    <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                        <a href="#">5</a>
+                                    </li>
+                                    <li class="paginate_button " aria-controls="dataTables-example" tabindex="0">
+                                        <a href="#">6</a>
+                                    </li>
+                                    <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0"
+                                        id="dataTables-example_next"><a href="#">Next</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
