--- a/Areas/Admin/Views/News/Details.cshtml
+++ b/Areas/Admin/Views/News/Details.cshtml
@@ -25,7 +25,7 @@
 
         <dd>
             <div class="col-md-4">
-                <img src="@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
+                <img src="~/Content/images/@Model.imagePath" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
             </div>
         </dd>
 
