--- a/Areas/Admin/Views/RoomInfoes/Edit.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Edit.cshtml
@@ -143,9 +143,9 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@*@section Scripts {
+@section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
-    }*@
+    }
 
 @section _Footer
 {
