--- a/Areas/Admin/Views/RoomInfoes/Index.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/Index.cshtml
@@ -17,7 +17,7 @@
 <div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
-            Quản lý Menu
+            Quản lý Tin đăng cho thuê phòng
         </div>
         <div class="panel-body">
             <div class="bs-example" style="text-align:right; padding-bottom:10px;">
