--- a/Areas/Admin/Views/RoomInfoes/getRoom.cshtml
+++ b/Areas/Admin/Views/RoomInfoes/getRoom.cshtml
@@ -31,46 +31,46 @@
             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.title)
+                        @Html.DisplayName("Tiêu đề")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.brief_description)
+                        @Html.DisplayName("Mô tả")
+                    </th>
+                    @*<th>
+                        @Html.DisplayName("Chi tiết")
+                    </th>*@
+                    <th>
+                        @Html.DisplayName("Giá phòng")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.detail_description)
+                        @Html.DisplayName("Diện tích")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.price)
+                        @Html.DisplayName("Khu vực")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.acreage)
+                        @Html.DisplayName("Địa chỉ")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.area)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.location)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.tenant)
+                        @Html.DisplayName("Đối tượng cho thuê")
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.meta)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.hide)
+                        @Html.DisplayName("Hiển thị")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.order)
+                        @Html.DisplayName("Sắp xếp")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.datebegin)
+                        @Html.DisplayName("Ngày đăng")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.RoomType.title)
+                        @Html.DisplayName("Loại phòng")
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Account.name)
+                        @Html.DisplayName("Người đăng")
                     </th>
                     <th></th>
                 </tr>
@@ -84,9 +84,9 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.brief_description)
                         </td>
-                        <td>
+                        @*<td>
                             @Html.DisplayFor(modelItem => item.detail_description)
-                        </td>
+                        </td>*@
                         <td>
                             @Html.DisplayFor(modelItem => item.price)
                         </td>
